--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "2.2.0"
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 JOLI = "bb331ad6-a1cf-11e9-23da-9bcb53c69f6f"
